# voucher_app

./: .gitignore  .pre-commit-config.yaml  README.md  custom_template.html  docker-compose.elk.yml  docker-compose.override.yml  docker-compose.yml  http_ca.crt  manage.py  nginx.conf  package-lock.json  pyproject.toml  requirements.txt  setup.cfg
backend/: Dockerfile  __init__.py  manage.py  pyproject.toml
backend/locale/ru/LC_MESSAGES/: django.mo  django.po
backend/users/: admin.py  apps.py  models.py
backend/users/migrations/: 0001_initial.py
backend/uwsgi/: uwsgi.ini
backend/vista_module/: __init__.py  apps.py  models.py
backend/vista_module/migrations/: 0001_initial.py  0002_order.py  0003_orderitem.py  0004_vouchertype.py  0005_alter_order_options.py  0006_alter_customer_options_alter_orderitem_options_and_more.py  0007_stock.py  0008_redeemedcard.py  __init__.py
backend/voucher/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/voucher/components/: _apps_mid.py  _authentication.py  _database.py  _locale.py  _log.py  _templates.py
backend/voucher_api/: apps.py  paginators.py  serializers.py  views.py
backend/voucher_app/: admin.py  apps.py  middleware.py  mixins.py  models.py
backend/voucher_app/migrations/: 0001_initial.py  0002_alter_template_properties.py  0002_alter_template_title_requestorder.py  0003_alter_templateproperty_property_type.py  0003_requestorder_addresses.py  0004_alter_template_properties_and_more.py  0004_remove_requestorder_voucher_type.py  0005_alter_templatepropertytype_name.py  0005_requestorder_voucher_type.py  0006_alter_templateproperty_options.py  0006_rename_voucher_type_requestorder_order_item.py  0007_alter_templateproperty_options_and_more.py  0007_template_logo.py  0008_remove_template_properties_and_more.py  0008_requestorder_qr_code.py  0009_remove_requestorder_qr_code_requestorder_code_type.py  0009_templateproperty_property_locale.py  0010_alter_templateproperty_property_value.py  0010_remove_requestorder_code_type.py  0011_alter_template_template_content.py  0011_alter_templateproperty_property_value.py  0012_alter_template_template_content.py  0012_alter_templateproperty_property_name.py  0013_rename_logo_template_logo_image_and_more.py  0014_template_logo_b64_template_voucher_b64.py  0015_remove_template_logo_b64_remove_template_voucher_b64.py
backend/vouchers/: asgi.py  settings.py  urls.py  wsgi.py
backend/vouchers/components/: __init__.py  _apps_mid.py  _locale.py
configs/: site.conf
deploy/: logstash.conf
frontend/: App.js  (+9 more)
worker_v2/api_receive/: Dockerfile  __init__.py  pyproject.toml  receive_worker.py  recieve_worker.py
worker_v2/api_receive/database/: __init__.py  database_classes.py  models.py
worker_v2/api_receive/html_render/: __init__.py  collect_request_data.py  html_generator.py
worker_v2/api_receive/settings/: config.py  logging.py
worker_v2/api_receive/templates/: order_base_template.html
worker_v2/api_receive/templates/static/: default.css
worker_v2/api_receive/templates/static/blocks/header/: header.css
worker_v2/api_receive/templates/static/blocks/orders/: orders.css
worker_v2/api_receive/templates/static/blocks/page/: page.css
worker_v2/api_receive/templates/static/blocks/refactor/: refactor.css
worker_v2/api_receive/templates/static/pages/: index.css  logon.css
worker_v2/html_to_pdf/: Dockerfile  __init__.py  pdf_worker.py  pyproject.toml
worker_v2/html_to_pdf/pdf_render/: receive_html.py
worker_v2/html_to_pdf/process_html/: __init__.py  tasks.py
worker_v2/html_to_pdf/settings/: config.py  logging.py
worker_v2/html_to_pdf/thread_worker/: __init__.py  worker.py
worker_v2/pdfs_to_zip/: Dockerfile  __init__.py  pyproject.toml  zip_worker.py
worker_v2/pdfs_to_zip/settings/: config.py  logging.py
worker_v2/pdfs_to_zip/utils/: redis_handle.py
worker_v2/pdfs_to_zip/zip_creation/: __init__.py  receive_pdf.py
worker_v2/send_zip/: Dockerfile  __init__.py  email_worker.py  pyproject.toml
worker_v2/send_zip/email_processing/: send_email.py
worker_v2/send_zip/email_processing/templates/: __init__.py  email_template.html
worker_v2/send_zip/queue_handle/: __init__.py  receive_email.py
worker_v2/send_zip/settings/: config.py
worker_v2/upload_to_sp/: Dockerfile  pyproject.toml  sp_worker.py
worker_v2/upload_to_sp/email_processing/: send_email.py
worker_v2/upload_to_sp/log_filters/: filters.py
worker_v2/upload_to_sp/queue_handle/: receive_email.py
worker_v2/upload_to_sp/settings/: config.py  logging.py
worker_v2/upload_to_sp/sp_processing/: send_sharepoint.py
workers/: Dockerfile  __init__.py  pyproject.toml  worker.py  worker_front_to_html.py
workers/database/: database_classes.py  database_wrappers.py  models.py
workers/html_generation/: __init__.py  html_generator.py
workers/pdf_generation/: __init__.py  pdf_generator.py
workers/send_to_email/: __init__.py  email_communication.py
workers/settings/: __init__.py  config.py
workers/templates/: email_template.html  order_base_template.html  refactorOrder_template.html
workers/templates/static/: default.css
workers/templates/static/blocks/button/: button.css
workers/templates/static/blocks/logon/: logon.css
workers/templates/static/blocks/logon/__form/: logon__form.css
workers/templates/static/blocks/logon/__title/: logon__title.css
workers/templates/static/blocks/main/: main.css
workers/templates/static/blocks/orders/__container/: orders__container.css
workers/templates/static/blocks/orders/__link/: orders__link.css
workers/templates/static/blocks/orders/__title/: orders__title.css
workers/templates/static/blocks/partner-choice/__image/: partner-choice__image.css
workers/templates/static/blocks/refactor/: refactor.css
workers/templates/static/blocks/refactor/__barcode/: refactor__barcode.css
workers/templates/static/fonts/: fonts.css
workers/templates/static/pages/: default.css  ordersPage.css  refactorOrder.css
workers/templates/static/scripts/: chooseAgent.js  logon.js  ordersPage.js
workers/zip_generation/: __init__.py  zip_generator.py
(+290 files in other folders)
