[tool.poetry]
name = "voucher pdf generator"
version = "0.1.0"
description = ""
authors = ["Захаров Павел <pzakharov83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
sqlalchemy = "^1.4.46"
jinja2 = "^3.1.2"
python-dotenv = "^0.21.0"
uvicorn = {version = "^0.20.0", platform = "linux"}
django-auth-adfs = "^1.11.1"
pip-system-certs = "^4.0"


[tool.poetry.group.dev.dependencies]
flake8-isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
