[tool.poetry]
name = "html-to-pdf"
version = "0.1.0"
description = ""
authors = ["Захаров Павел <pzakharov83@gmail.com>"]
readme = "README.md"
packages = [{include = "html_to_pdf"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
weasyprint = "^57.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
