[tool.poetry]
name = "pdfs-to-zip"
version = "0.1.0"
description = ""
authors = ["Захаров Павел <pzakharov83@gmail.com>"]
readme = "README.md"
packages = [{include = "pdfs_to_zip"}]

[tool.poetry.dependencies]
python = "^3.10"
py7zr = "^0.20.2"
multivolumefile = "^0.2.3"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
