[tool.poetry]
name = "pdfs-to-zip"
version = "0.1.0"
description = ""
authors = ["Захаров Павел <pzakharov83@gmail.com>"]
readme = "README.md"
packages = [{include = "pdfs_to_zip"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
