[tool.poetry]
name = "worker-v2"
version = "0.1.0"
description = ""
authors = ["Захаров Павел <pzakharov83@gmail.com>"]
readme = "README.md"
packages = [{include = "worker_v2"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
sqlalchemy-stubs = "^0.4"
types-redis = "^4.5.5.2"


[tool.poetry.group.api_receive.dependencies]
pyicu = {version = "^2.11", platform = "linux"}
pika = "^1.3.2"
jinja2 = "^3.1.2"
python-barcode = "^0.14.0"
qrcode = "^7.4.2"
sqlalchemy = "^2.0.15"
pyodbc = "^4.0.39"
psycopg2-binary = {version = "^2.9.6", platform = "linux"}
pillow = "^9.5.0"
python-logstash = "^0.4.8"
pydantic = "^2.5.2"
redis = {extras = ["hiredis"], version = "^5.0.1", platform = "linux"}
pydantic-settings = "^2.1.0"


[tool.poetry.group.html_to_pdf.dependencies]
pika = "^1.3.2"
weasyprint = "^59.0"
python-logstash = "^0.4.8"
pydantic = "^2.5.2"
redis = {extras = ["hiredis"], version = "^5.0.1", platform = "linux"}
pydantic-settings = "^2.1.0"


[tool.poetry.group.pdfs_to_zip.dependencies]
pika = "^1.3.2"
python-logstash = "^0.4.8"
pydantic = "^2.5.2"
redis = {extras = ["hiredis"], version = "^5.0.1", platform = "linux"}
pydantic-settings = "^2.1.0"


[tool.poetry.group.send_zip.dependencies]
pika = "^1.3.2"
jinja2 = "^3.1.2"
python-logstash = "^0.4.8"
office365-rest-python-client = "^2.4.1"
pydantic = "^2.5.2"
redis = {extras = ["hiredis"], version = "^5.0.1", platform = "linux"}
pydantic-settings = "^2.1.0"

[tool.poetry.group.upload_to_sp.dependencies]
pika = "^1.3.2"
jinja2 = "^3.1.2"
python-logstash = "^0.4.8"
office365-rest-python-client = "^2.4.1"
pydantic = "^2.5.2"
redis = {extras = ["hiredis"], version = "^5.0.1", platform = "linux"}
pydantic-settings = "^2.1.0"


[tool.poetry.group.upload_local.dependencies]
pydantic = "^2.5.2"
pika = "^1.3.2"
jinja2 = "^3.1.2"
python-logstash = "^0.4.8"
aiofiles = "^23.2.1"
redis = {extras = ["hiredis"], version = "^5.0.1", platform = "linux"}
aiohttp = {extras = ["speedups"], version = "^3.9.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
